# LFM2-SSM-Hybrid

./: .gitignore  Makefile  README.md  concept.md  pyproject.toml
.github/workflows/: ci.yml
configs/: small.json
scripts/: export_npz.py  hf_export_npz.py  infer.py  infer_torch.py  init_from_hf.py  parity_check.py  partial_load.py  train.py  train_torch.py
src/lfm2_hybrid/: __init__.py  blocks.py  model.py  utils.py
tests/: test_shapes.py
