[project]
name = "lfm2-hybrid"
version = "0.0.1"
description = "POC for LFM2 hybrid (MLP + SSM)"
readme = "AGENTS.md"
requires-python = ">=3.10"
authors = [{ name = "Contributors" }]
dependencies = [
  # Pin torch only in your environment; left unpinned here for portability
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "mypy",
  "pyright; platform_system == 'Linux'",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["lfm2_hybrid"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
